--- a/crypto/paxful-to-buy-btc-by-paypal.html
+++ b/crypto/paxful-to-buy-btc-by-paypal.html
@@ -428,8 +428,8 @@
                   <article class="post-next col-6">
                     
                     
-                      <a href="/tech/apple-id.html" title="苹果美区账号火箭AppleID共享">
-                        <span class="hidden-mobile">苹果美区账号火箭AppleID共享</span>
+                      <a href="/ai/wonderful-prompts.html" title="中文 Prompts 精选">
+                        <span class="hidden-mobile">中文 Prompts 精选</span>
                         <span class="visible-mobile">下一篇</span>
                         <i class="iconfont icon-arrowright"></i>
                       </a>
