--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"info.nickyam.com","root":"/","version":"1.9.7","typing":{"enable":true,"typeSpeed":70,"cursorChar":"_","loop":true,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":{"measurement_id":null},"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml","include_content_in_search":true};
+    var CONFIG = {"hostname":"info.nickyam.com","root":"/","version":"1.9.7","typing":{"enable":true,"typeSpeed":70,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":{"measurement_id":null},"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml","include_content_in_search":true};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -315,7 +315,7 @@
 <p>如果您有商业用途的需求，请联系相应版权方购买版权。</p>
 <p>我们郑重声明，禁止任何个人或公司将本站提供的资源用于从事违法犯罪等活动。任何违法行为由购买者自行承担，与本网站无关。</p>
 <p>特此声明。</p>
-<p>如有任何疑问或需要进一步解释，请通过邮箱：<a href="mailto:&#x6d;&#101;&#x40;&#110;&#105;&#99;&#x6b;&#121;&#97;&#109;&#46;&#99;&#x6f;&#109;">&#x6d;&#101;&#x40;&#110;&#105;&#99;&#x6b;&#121;&#97;&#109;&#46;&#99;&#x6f;&#109;</a> 联系，谢谢！</p>
+<p>如有任何疑问或需要进一步解释，请通过邮箱：<a href="mailto:&#x6d;&#x65;&#x40;&#110;&#105;&#x63;&#x6b;&#121;&#97;&#109;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#x65;&#x40;&#110;&#105;&#x63;&#x6b;&#121;&#97;&#109;&#x2e;&#99;&#x6f;&#x6d;</a> 联系，谢谢！</p>
 
   </div>
 
