--- a/web/how-to-make-hexo-not-render-markdown.html
+++ b/web/how-to-make-hexo-not-render-markdown.html
@@ -395,8 +395,8 @@
                   <article class="post-next col-6">
                     
                     
-                      <a href="/coding/ticket-grabbing-script-of-damai.html" title="某麦网自动刷新抢票脚本">
-                        <span class="hidden-mobile">某麦网自动刷新抢票脚本</span>
+                      <a href="/web/hexo-butterfly-pug-stylus.html" title="Hexo+Butterfly博客报错extends includes/layout.pug block content include ./includes/mixins/post-ui">
+                        <span class="hidden-mobile">Hexo+Butterfly博客报错extends includes/layout.pug block content include ./includes/mixins/post-ui</span>
                         <span class="visible-mobile">下一篇</span>
                         <i class="iconfont icon-arrowright"></i>
                       </a>
