--- a/about/index.html
+++ b/about/index.html
@@ -315,7 +315,7 @@
 <p>如果您有商业用途的需求，请联系相应版权方购买版权。</p>
 <p>我们郑重声明，禁止任何个人或公司将本站提供的资源用于从事违法犯罪等活动。任何违法行为由购买者自行承担，与本网站无关。</p>
 <p>特此声明。</p>
-<p>如有任何疑问或需要进一步解释，请通过邮箱：<a href="mailto:&#109;&#x65;&#x40;&#x6e;&#x69;&#x63;&#x6b;&#121;&#97;&#109;&#46;&#99;&#111;&#109;">&#109;&#x65;&#x40;&#x6e;&#x69;&#x63;&#x6b;&#121;&#97;&#109;&#46;&#99;&#111;&#109;</a> 联系，谢谢！</p>
+<p>如有任何疑问或需要进一步解释，请通过邮箱：<a href="mailto:&#109;&#x65;&#x40;&#x6e;&#x69;&#99;&#x6b;&#x79;&#x61;&#109;&#46;&#x63;&#111;&#109;">&#109;&#x65;&#x40;&#x6e;&#x69;&#99;&#x6b;&#x79;&#x61;&#109;&#46;&#x63;&#111;&#109;</a> 联系，谢谢！</p>
 
   </div>
 
